// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atom / Icon [SNAPSHOT] Circular 렌더링 1`] = `
.c0 {
  height: 2rem;
  border-radius: 50%;
}

<Icon
  alt="External Link Icon"
  circular={true}
  height="2rem"
  src="external-link-symbol.svg"
>
  <styled.img
    alt="External Link Icon"
    circular={true}
    height="2rem"
    src="external-link-symbol.svg"
  >
    <StyledComponent
      alt="External Link Icon"
      circular={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  height: ",
              [Function],
              ";
  border-radius: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.img",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "img",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      height="2rem"
      src="external-link-symbol.svg"
    >
      <img
        alt="External Link Icon"
        className="c0"
        height="2rem"
        src="external-link-symbol.svg"
      />
    </StyledComponent>
  </styled.img>
</Icon>
`;

exports[`Atom / Icon [SNAPSHOT] 렌더링 1`] = `
.c0 {
  height: 2rem;
}

<Icon
  alt="string"
  src="external-link-symbol.svg"
>
  <styled.img
    alt="string"
    height="2rem"
    src="external-link-symbol.svg"
  >
    <StyledComponent
      alt="string"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  height: ",
              [Function],
              ";
  border-radius: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.img",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "img",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      height="2rem"
      src="external-link-symbol.svg"
    >
      <img
        alt="string"
        className="c0"
        height="2rem"
        src="external-link-symbol.svg"
      />
    </StyledComponent>
  </styled.img>
</Icon>
`;
